--- a/styles/variaveis.scss
+++ b/styles/variaveis.scss
@@ -1,6 +1,6 @@
-$fonteRegular:'Biennale Regular';
-$fonteBold: 'Biennale Bold';
-$fonteLight:'Biennale Ligth';
+$fontRegular:'Biennale Regular';
+$fontBold: 'Biennale Bold';
+$fontLight:'Biennale Ligth';
 
 $corPrimaria:#5E49FF;
 $corPrimaria3:#25C8D3;
