--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,14 +5,10 @@
   font-family: 'biennale regular';
   font-size: 14px;
 }
-
 html, body, #_next{
   height: 100%;
   margin: 0;
 }
-
-
-
 .avatar{
   border-radius: 50%;
   object-fit: cover; //ajusta a imagemn de acordo com o tamanho necessario
@@ -40,9 +36,37 @@ input{
 
 }
 
+.desktop{
+  @media screen and (min-width: $desktopBreakpoint) {
+    display: block;
+  }
+  @media screen and (max-width: calc($desktopBreakpoint - 1px)) {
+    display: none;
+  }
+}
+
+.mobile{
+  @media screen and (min-width: $desktopBreakpoint) {
+    display: none;
+  }
+  @media screen and (max-width: calc($desktopBreakpoint - 1px)) {
+    display: block;
+  }
+}
+
+.mensagemValidacao{
+  display: block;
+  color: $vermelho;
+  font-size: 90%;
+  margin-top: -15px;
+  margin-bottom: 15px;
+
+}
+
 
 @import '../public/fonts/fonts.scss';//importação da fonte por url 
 @import '../componentes/botao/button.scss';
 @import './paginaPublica.scss';
 @import '../componentes/inputPublico/inputPublico.scss';
+@import'../pages/cadastro/cadastro.scss'
 
