Criação do Hoc e inicio dos estilos navBar

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -68,5 +68,7 @@ input{
 @import '../componentes/botao/button.scss';
 @import './paginaPublica.scss';
 @import '../componentes/inputPublico/inputPublico.scss';
-@import'../pages/cadastro/cadastro.scss'
+@import '../componentes/layout/cabecalho.scss';
+@import'../pages/cadastro/cadastro.scss';
+
 
