--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,42 +1,42 @@
+@import 'variaveis.scss'; //importação das variáveis
 
-@import 'variaveis.scss';//importação das variáveis
-
-*{
+* {
   font-family: 'biennale regular';
   font-size: 14px;
 }
-html, body, #_next{
+html,
+body,
+#_next {
   height: 100%;
   margin: 0;
 }
-.avatar{
+.avatar {
   border-radius: 50%;
   object-fit: cover; //ajusta a imagemn de acordo com o tamanho necessario
 }
 
-.oculto{
-  display:none;
+.oculto {
+  display: none;
 }
 
-input{
-  &::placeholder{
+input {
+  &::placeholder {
     /*Chrome, Opera, Safari e Firefox*/
-    color:$cinza2;
+    color: $cinza2;
     opacity: 1;
   }
 
-  &:-ms-input-placeholder{
+  &:-ms-input-placeholder {
     /*ie 10-11*/
-    color:$cinza2;
+    color: $cinza2;
   }
 
-  &::-ms-input-placeholder{
-    color:$cinza2
+  &::-ms-input-placeholder {
+    color: $cinza2;
   }
-
 }
 
-.desktop{
+.desktop {
   @media screen and (min-width: $desktopBreakpoint) {
     display: block;
   }
@@ -45,7 +45,7 @@ input{
   }
 }
 
-.mobile{
+.mobile {
   @media screen and (min-width: $desktopBreakpoint) {
     display: none;
   }
@@ -54,21 +54,35 @@ input{
   }
 }
 
-.mensagemValidacao{
+.mensagemValidacao {
   display: block;
   color: $vermelho;
   font-size: 90%;
   margin-top: -15px;
   margin-bottom: 15px;
-
 }
 
+.barraNavegacao {
+  ul {
+    display: flex;
+    justify-content: space-around;
+    padding: 0;
+    margin: 10px 0px;
 
-@import '../public/fonts/fonts.scss';//importação da fonte por url 
+    li {
+      list-style: none;
+      cursor: pointer;
+    }
+  }
+}
+strong {
+  font-family: $fontBold;
+}
+
+@import '../public/fonts/fonts.scss'; //importação da fonte por url
 @import '../componentes/botao/button.scss';
 @import './paginaPublica.scss';
 @import '../componentes/inputPublico/inputPublico.scss';
 @import '../componentes/layout/cabecalho.scss';
-@import'../pages/cadastro/cadastro.scss';
-
-
+@import '../pages/cadastro/cadastro.scss';
+@import '../componentes/layout/rodape.scss';
