--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -79,6 +79,14 @@ strong {
   font-family: $fontBold;
 }
 
+body {
+  @media screen and (min-width: $desktopBreakpoint) {
+    background-color: $Cinza5;
+    background-image:url('/imagens/backgroundDesktop.svg')
+
+  }
+}
+
 @import '../public/fonts/fonts.scss'; //importação da fonte por url
 @import '../componentes/botao/button.scss';
 @import './paginaPublica.scss';
@@ -86,3 +94,4 @@ strong {
 @import '../componentes/layout/cabecalho.scss';
 @import '../pages/cadastro/cadastro.scss';
 @import '../componentes/layout/rodape.scss';
+@import '/componentes/feed/feed.scss'
