--- a/componentes/feed/feed.scss
+++ b/componentes/feed/feed.scss
@@ -1,19 +1,19 @@
 .feedContainer {
-  padding-bottom: 60px;
+  padding-bottom: 40px;
   background-color: $branco;
   margin-top: 16px;
 
   .postagem {
+    .avatar {
+      height: 32px;
+      width: 32px;
+      margin-left: 8px;
+      margin-right: 8px;
+    }
     .cabecalhoPostagem {
       display: flex;
       align-items: center;
 
-      .avatar {
-        height: 32px;
-        width: 32px;
-        margin-left: 8px;
-        margin-right: 8px;
-      }
       strong {
         font-size: 12px;
         color: $cinza4;
@@ -40,6 +40,13 @@
       p.descricao {
         font-size: 12px;
         margin: 0 0 2px;
+
+        .exibirDescricaoCompleta {
+          font-size: 12px;
+          color: $corPrimaria3;
+          margin-left: 4px;
+          cursor: pointer;
+        }
       }
 
       .acoesDaPostagem {
@@ -60,9 +67,24 @@
         }
       }
     }
+
+    .containerFazerComentario {
+      display: flex;
+      align-items: center;
+      padding: 0 12px;
+      margin-bottom: 16px;
+      textarea {
+        resize: none;
+        flex: 1;
+        max-width: 100%;
+        border: none;
+        outline: none;
+        font-size: 12px;
+        color: $cinza2;
+      }
+    }
   }
   @media screen and (min-width: $desktopBreakpoint) {
-    padding-top: 8px;
-    margin-top: 16px;
+    padding-top: 5px;
   }
 }
