--- a/componentes/feed/feed.scss
+++ b/componentes/feed/feed.scss
@@ -1,5 +1,5 @@
 .feedContainer {
-  padding-bottom: 60px;
+  padding-bottom: 25px;
   background-color: $branco;
   margin-top: 16px;
 
@@ -105,6 +105,7 @@
 
     .postagem {
       .cabecalhoPostagem {
+        padding-top: 10px;
         cursor: pointer;
       }
 
