--- a/styles/paginaPublica.scss
+++ b/styles/paginaPublica.scss
@@ -1,3 +1,7 @@
+.body {
+  height: 100%;
+}
+
 .paginaPublica {
   display: flex;
   flex-direction: column;
@@ -7,89 +11,90 @@
   padding: 0 32px;
   background-color: $branco;
 
-
   .logoContainer {
-      position: relative;
-      height: 9em;
-      width: 100%;
-      margin-top: 100px;
+    position: relative;
+    height: 9em;
+    width: 100%;
+    margin-top: 100px;
   }
 
   .conteudoPaginaPublica {
-      width: 100%;
-      margin-top: 20px;
+    width: 100%;
+    height: 100%;
+    margin-top: 20px;
   }
-  
+
   .btn {
-      margin-top: 15px;
-      padding: 10px;
+    margin-top: 15px;
+    padding: 10px;
   }
 
   .rodapePaginaPublica {
-      text-align: center;
-      margin-top: 10px;
-      
+    text-align: center;
+    margin-top: 10px;
 
-      p {
-          color: $cinza3;
-          margin: 0px 0px 2px;
-      }
+    p {
+      color: $cinza3;
+      margin: 0px 0px 2px;
+    }
 
-      a {
-          color: $corPrimaria;
-          font-family: $fontBold;
-      }
+    a {
+      color: $corPrimaria;
+      font-family: $fontBold;
+    }
   }
 
   @media screen and (min-width: $desktopBreakpoint) {
-      flex-direction: row;
-      padding: 0 140px;
+    flex-direction: row;
+    padding: 0px 140px;
+    font-size: 18px;
+    background-image: none;
+    padding-bottom: 148px;
+
+    html,
+    body {
+      height: 80%;
+      margin-top: 55px;
+    }
+
+    .logoContainer {
+      height: 22em;
+      flex: 2;
+      margin-top: 200px;
+      width: 100%;
+
+      .logo {
+        width: 100%;
+        max-width: 300px;
+        margin-left: 150px;
+      }
+    }
+
+    .conteudoPaginaPublica {
+      flex: 1;
+      width: 100%;
+      border: 1px solid $corPrimaria;
+      border-radius: 26px;
+      padding: 40px 60px;
+      margin-top: 100px;
+    }
+
+    .btn {
+      padding: 18px;
       font-size: 18px;
-    
-      html, body{
-        height:80%;
-        margin-top: 55px;
-            }    
-      
-      .logoContainer {
-          height: 22em;
-          flex: 2;
-          margin-top: 200px;
-          width: 100%;
-         
-          .logo {
-              width: 100%;
-              max-width: 300px;
-              margin-left: 150px;
-          }
-      }
+    }
 
-      .conteudoPaginaPublica {
-          flex: 1;
-          width: 100%;
-          border: 1px solid $corPrimaria;
-          border-radius: 26px;
-          padding:40px 60px ;
-          margin-top:150px;
-          
+    .rodapePaginaPublica {
+      p,
+      a {
+        font-size: 18px;
       }
-    
+    }
 
-      .btn {
-          padding: 18px;
-          font-size: 18px;
+    .inputPublico {
+      input {
+        font-size: 16px;
       }
-
-      .rodapePaginaPublica {
-          p, a {
-              font-size: 18px;
-          }
-      }
-
-      .inputPublico {
-          input {
-              font-size: 16px;
-          }
-      }
+    }
   }
 }
