--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -100,4 +100,5 @@ body {
 @import '../componentes/layout/cabecalho.scss';
 @import '../pages/cadastro/cadastro.scss';
 @import '../componentes/layout/rodape.scss';
-@import '/componentes/feed/feed.scss'
+@import '/componentes/feed/feed.scss';
+@import '/componentes/cabecalhoComAcoes/cabecalhoComAcoes.scss';
