--- a/componentes/cabecalhoComAcoes/cabecalhoComAcoes.scss
+++ b/componentes/cabecalhoComAcoes/cabecalhoComAcoes.scss
@@ -1,4 +1,16 @@
 .cabecalhoComAcoes{
   display: flex;
-  border-bottom: 2.5 solid $cinza1;
+  border-bottom: 0.5px solid $cinza1;
+  padding-left: 20px;
+  padding-right: 20px;
+align-items: center;
+
+  h3{
+    font-family: $fontBold;
+    font-size: 16px;
+    text-align: center;
+    flex: 1;
+  }
+
+
 }
