--- a/componentes/layout/cabecalho.scss
+++ b/componentes/layout/cabecalho.scss
@@ -76,6 +76,7 @@
   @media screen and (min-width: $desktopBreakpoint) {
     background-color: $branco;
     border: none;
+    margin-bottom: 25px;
 
     .conteudoCabecalhoPrincipal {
       max-width: 60%;
