--- a/pages/perfil/perfil.scss
+++ b/pages/perfil/perfil.scss
@@ -1,5 +1,8 @@
 .paginaPerfil {
   .cabecalhoPerfil {
+    background-color: $branco;
+    margin-bottom: -15px;
+    
     .statusPerfil {
       display: flex;
       align-items: center;
@@ -18,8 +21,9 @@
 
       .btn {
         margin-top: 16px;
-        padding: 5px;
+        padding: 6px;
         font-size: 12px;
+        border-radius: 8px;
       }
       .statusContainer {
         display: flex;
