--- a/pages/perfil/perfil.scss
+++ b/pages/perfil/perfil.scss
@@ -2,7 +2,7 @@
   .cabecalhoPerfil {
     background-color: $branco;
     margin-bottom: -15px;
-    
+
     .statusPerfil {
       display: flex;
       align-items: center;
@@ -43,4 +43,40 @@
       }
     }
   }
+
+  @media screen and (min-width: $desktopBreakpoint) {
+    .cabecalhoPerfil {
+      .cabecalhoComAcoes {
+       img {
+          display:none !important;
+         
+        }
+      }
+    .bordaDoCabecalhoPerfil{
+      margin:0 auto;
+      border: none;
+      background-color: $cinza1;
+      height: 1px;
+      width: 94%;
+    }
+    
+    }
+    .statusPerfil{
+      .avatar{
+        width: 90px;
+        height: 90px;
+      }
+
+      .informacoesPerfil{
+        .btn{
+          padding: 8px;
+        }
+      }
+
+
+    }
+  }
+
+
+
 }
