finalizar o layout da tela de perfil

--- a/styles/paginaPublica.scss
+++ b/styles/paginaPublica.scss
@@ -49,12 +49,11 @@
     padding: 0px 140px;
     font-size: 18px;
     background-image: none;
-    padding-bottom: 148px;
+    padding-bottom: 17px;
 
     html,
     body {
-      height: 80%;
-      margin-top: 55px;
+      height:100%
     }
 
     .logoContainer {
@@ -66,7 +65,7 @@
       .logo {
         width: 100%;
         max-width: 300px;
-        margin-left: 150px;
+        margin-left: 10px;
       }
     }
 
