Correção estilos da postagem

--- a/componentes/feed/feed.scss
+++ b/componentes/feed/feed.scss
@@ -2,8 +2,8 @@
   padding-bottom: 25px;
   background-color: $branco;
   margin-top: 16px;
-
   .postagem {
+    padding-bottom: 25px;
     .avatar {
       height: 32px;
       width: 32px;
