exibir o botao de Logout no desktop

--- a/pages/perfil/perfil.scss
+++ b/pages/perfil/perfil.scss
@@ -55,7 +55,7 @@
     .cabecalhoPerfil {
       .cabecalhoComAcoes {
         img {
-          display: none !important;
+          cursor:pointer;
         }
       }
       .bordaDoCabecalhoPerfil {
