--- a/styles/paginaPublica.scss
+++ b/styles/paginaPublica.scss
@@ -53,7 +53,7 @@
 
     html,
     body {
-      height:100%
+      height: 100%;
     }
 
     .logoContainer {
@@ -61,11 +61,13 @@
       flex: 2;
       margin-top: 200px;
       width: 100%;
+      padding-bottom: 132px;
 
       .logo {
         width: 100%;
         max-width: 300px;
-        margin-left: 10px;
+        margin-left: 100px;
+        margin-bottom: 50px;
       }
     }
 
@@ -74,8 +76,8 @@
       width: 100%;
       border: 1px solid $corPrimaria;
       border-radius: 26px;
-      padding: 40px 60px;
-      margin-top: 100px;
+      padding: 80px 60px;
+      margin-top: 150px;
     }
 
     .btn {
