--- a/componentes/cabecalhoComAcoes/cabecalhoComAcoes.scss
+++ b/componentes/cabecalhoComAcoes/cabecalhoComAcoes.scss
@@ -1,6 +1,6 @@
 .cabecalhoComAcoes {
   display: flex;
-  //border-bottom: 0.5px solid $cinza1;
+  
   padding-left: 20px;
   padding-right: 20px;
   align-items: center;
@@ -11,7 +11,14 @@
     text-align: center;
     flex: 1;
   }
+    .btnAcaoDireita{
+      border: none;
+      background-color: transparent;
+      cursor: pointer;
 
- 
-
+    }
+    
+    
+    
+    
 }
