--- a/pages/perfil/perfil.scss
+++ b/pages/perfil/perfil.scss
@@ -73,3 +73,59 @@
     }
   }
 }
+
+.conteudoPaginaEditarPerfil {
+background-color: $branco;
+
+  h1 {
+    font-family: $fontBold;
+    font-size: 16px;
+    width: 90px;
+    height: 24px;
+    margin-bottom: -25px;
+    margin-left: 41%;
+    color: $cinza4;
+    z-index: +1;
+  }
+  .edicaoAvatar {
+    margin:16px 0px ;
+    text-align: center;
+    .avatar {
+      width: 80px;
+      height: 80px;
+      margin-bottom: 3px;
+    }
+    span{
+      font-size: 12px;
+      color:$corPrimaria;
+      text-decoration: underline;
+    }
+  }
+  .edicaoNome{
+    margin:18px 0px ;
+    display: flex;
+    align-items: center;
+    padding: 0px 16px;
+
+    label{
+      color:$cinza3
+    }
+    input{
+      flex:1;
+      border: none;
+      outline: none;
+      padding: 0px 16px;
+      color:$cinza4
+    }
+  
+  }
+  
+  @media screen and (min-width: $desktopBreakpoint) {
+    display: flex;
+    height: 85vh;
+    flex-direction: column;
+    
+    .conteudoPaginaEditarPerfil {
+      flex: 1;
+    }}
+  }
