--- a/pages/perfil/perfil.scss
+++ b/pages/perfil/perfil.scss
@@ -19,6 +19,11 @@
         width: 80px;
         height: 80px;
         margin-right: 24px;
+
+        border: solid 3px transparent;
+        background-image: linear-gradient(to bottom, white, white), radial-gradient(circle at top center, $corPrimaria,$corPrimaria3);
+        background-origin: border-box;
+        background-clip: content-box, border-box;
       }
     }
     .informacoesPerfil {
